--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -39,4 +39,17 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <!--커스텀 토큰 인증 필터-->
+    <filter>
+        <filter-name>AuthenticationFilter</filter-name>
+        <filter-class>com.payhere.app.jwt.AuthenticationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AuthenticationFilter</filter-name>
+        <url-pattern>/auth/*</url-pattern>
+    </filter-mapping>
+
+
+
+
 </web-app>
