--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,12 @@
             <version>0.9.1</version>
         </dependency>
 
-
+        <!-- Logger -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.32</version>
+        </dependency>
 
     </dependencies>
 
